--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
   font-family: 'Times New Roman', Times, serif;
   margin: 0;
-  background-image: url(background.jpg);
+  background-image: url('https://i.ibb.co/Kbw2qp2/background.jpg'); 
   width: 100%;
   height: 100%;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-image: url(images/background.jpg);
 }
+
 
 body img {
   height: 100%;
